# cmake_practice

./: .gitignore
Ep1/: CMakeLists.txt  main.cpp
Ep1/include/: cat.h  dog.h  pet.h
Ep1/src/: cat.cpp  dog.cpp  pet.cpp
Ep2_add_lib/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
Ep3_observer_pattern/: CMakeLists.txt
Ep3_observer_pattern/include/: ioberver.h  isubject.h
Ep3_observer_pattern/src/: iobserver.cpp  isubject.cpp  observer.cpp  subject.cpp
Ep3_observer_patthern/: CMakeLists.txt  main.cpp
Ep3_observer_patthern/include/: observer.h  subject.h
